kubernetes/manifest/base-ocp/ollama-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ollama
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: 'ollama/ollama:latest'
          ports:
            - name: 11434-tcp
              containerPort: 11434
              protocol: TCP
          resources:
            limits:
              cpu: '6'
              memory: 12Gi
            requests:
              cpu: '6'
              memory: 10Gi
          volumeMounts:
            - name: ollama-pvc
              mountPath: /root/.ollama
      volumes:
        - name: ollama-pvc
          persistentVolumeClaim:
            claimName: ollama-pvc
