kubernetes/manifest/base-ocp/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: open-webui
  labels:
    app: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
spec:
  type: ClusterIP  # For OpenShift it's fine to set it to ClusterIP
  selector:
    app: ollama
  ports:
    - name: 11434-tcp # Give a port the name for better resolvability
      protocol: TCP
      port: 11434
      targetPort: 11434
  internalTrafficPolicy: Cluster
  sessionAffinity: None
