kubernetes/manifest/base-ocp/webui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui-route
  namespace: open-webui
  labels:
    app: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
spec:
  to:
    kind: Service
    name: open-webui-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
